# ManimExtras

./: LICENSE  README.md  __init__.py  animations.py  pyproject.toml  setup.cfg  utils.py
src/ManimExtras/: animations.py  mobjects.py
