[metadata]
name = manim-extras
version = 0.1
author = Wafarm
author_email = qinyy07@gmail.com
description = Addons to Manim Community
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wafarm/ManimExtras
project_urls =
    Bug Tracker = https://github.com/wafarm/ManimExtras/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    manim

[options.packages.find]
where = src